--- a/templates/news/news.html
+++ b/templates/news/news.html
@@ -9,14 +9,21 @@
     {% with latest_news.0 as article %}
         <h1>{{ article.1.1.date }}</h1>
     {% endwith %}
+    
+    {% for story in latest_news.1 %}
+    <div class="story_preview">
+        {% with story.0 as article %}
+            <h3 class="latest_headlines" group="{{ article.group }}">
+                <a href="{{ article.group }}"> {{ story.1|safe }}</a>
+            </h3>
+        {% endwith %}
         <ul>
-            {% for story in latest_news.1 %}
-                <h3 class="latest_headlines">{{ forloop.counter }}<a href="{{ latest_storygroups.0 }}"> {{ story.1|safe }}</a></h3>
-                {% for article in story %}
+            {% for article in story %}
                 <li class="latest_items"><a href="{{ article.url }}" class="publinks">{{ article.publisher|safe }}</a></li>
-                {% endfor %}
             {% endfor %}
         </ul>
+    </div>
+    {% endfor %}
     
     
 {% else %}
