--- a/templates/base.html
+++ b/templates/base.html
@@ -4,15 +4,20 @@
     <link href="/media/css/main.css" rel="stylesheet" type="text/css" media="screen"/>
     <script type="text/javascript" src="/media/js/jquery.js"></script>
     <script type="text/javascript" src="/media/js/jqeasing_v1.3.js"></script>
+    <script type="text/javascript" src="/media/js/d3.v2.js"></script>
     <script type="text/javascript" src="/media/js/main.js"></script>
     <title>{% block title %}n e w s : c o r p o r a{% endblock %}</title>
 </head>
 
 <body>
+{% block header %}
+{% endblock %}
     <div id="content">
         {% block content %}
             <p>s m a r t i c l e s</p>
         {% endblock %}
     </div>
+    
+
 </body>
 </html>
