show article family

--- a/templates/news/collate.html
+++ b/templates/news/collate.html
@@ -9,8 +9,8 @@
 {% block header %}
     <script type="text/javascript" src="/media/js/getdata.js"></script>
     <div id="toolbar">
-        <div id="lengthbutton" class="button">map:chars</div>
         <div id="heatbutton" class="button">map:freq</div>
+        <div id="familybutton" class="button">show:family</div>
         <div id="namedbutton" class="button">named:level</div>
         <!--
 <div id="my-slider" class="dragdealer">
