--- a/media/css/main.css
+++ b/media/css/main.css
@@ -58,6 +58,9 @@ ul h3.latest_headlines {
     background-color: #222;
     
 }
+div.clicked {
+    background-color: #111;
+}
 .articleClass {
     color: #222;
     font-size: 16px;
