--- a/templates/news/collate.html
+++ b/templates/news/collate.html
@@ -46,7 +46,10 @@
         {% else %}
             <p>Sorry, no articles available.</p>
         {% endif %}
-
+            
+        <div id="important" style="margin: 20px;">
+            <ul></ul>
+        </div>
         <div id="quotes" style="margin: 20px;">
             <ul></ul>
         </div>
