--- a/templates/news/collate.html
+++ b/templates/news/collate.html
@@ -10,8 +10,10 @@
     <script type="text/javascript" src="/media/js/getdata.js"></script>
     <div id="toolbar">
         <div id="heatbutton" class="button">map:freq</div>
+        <div id="namedbutton" class="button">named:levels</div>
         <div id="familybutton" class="button">show:family</div>
-        <div id="namedbutton" class="button">named:level</div>
+        <div id="importantnet" class="button">show:terms</div>
+        
         <!--
 <div id="my-slider" class="dragdealer">
         	<div id="speed" class="handle">x</div>
