--- a/media/css/main.css
+++ b/media/css/main.css
@@ -3,22 +3,60 @@
     margin: 0px;
 }
 
+/*
 @font-face {
-	font-family: Oswald-Light;
+	font-family: OswaldLight;
 	src: url('Oswald-Light.otf'):
 }
 @font-face {
-	font-family: Oswald-Regular;
+	font-family: OswaldRegular;
 	src: url('Oswald-Regular.otf');
 }
 @font-face {
-	font-family: Oswald-Bold;
+	font-family: OswaldBold;
 	src: url('Oswald-Bold.otf');
+}
+*/
+
+
+@font-face {
+    font-family: 'Oswald';
+    src: url('Oswald-Regular.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Oswald';
+    src: url('Oswald-Light.otf') format('opentype');
+    font-weight: 200;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Oswald';
+    src: url('Oswald-Bold.otf') format('opentype');
+    font-weight: 600;
+    font-style: normal;
+}
+
+
+
+@font-face {
+	font-family: MisoLight;
+	src: url('./media/css/miso-light.otf'):
+}
+@font-face {
+	font-family: MisoReg;
+	src: url('miso.otf');
+}
+@font-face {
+	font-family: MisoBold;
+	src: url('miso-bold.otf');
 }
 
 body {
-    font-family: Oswald-Regular, Helvetica, 'sans serif';
-    background-color: rgb(250,240,242);
+    font-family: Oswald, Helvetica, 'sans serif';
+    background: rgb(250,240,242) url(/media/images/pape_light.png) repeat 0 0;
+    min-width: 900px;   
 }
 #content {
     padding: 20px;
@@ -33,7 +71,8 @@ a:hover {
 }
 a.publinks {
     color: #444;
-    /* font-family: Oswald-Light; */
+    font-family: Oswald;
+    font-weight: 200;
     text-transform: uppercase;
 }
 a.publinks:hover {
@@ -68,7 +107,7 @@ ul h3.latest_headlines {
 }
 
 #SVGcontainer {
-    background-color: #fff;
+    background-color: none;
     position: relative;
 }
 .story_preview {
@@ -83,13 +122,36 @@ ul h3.latest_headlines {
 
 /*////////////////////////////////////////////////////////////////// STORY PAGE */
 #toolbar {
+    position: fixed;
+    z-index: 100;
+    top: 0px;
+    width: 100%;
+    min-width: 900px; 
+    margin-bottom: 20px;
+    height: 24px;
+    padding: 16px;
+    background: #444 url(/media/images/wgray_85.png) repeat 0 0;
+}
+#toolbacker {
     position: relative;
+    width: 100%;
+    margin-bottom: 20px;
+    height: 55px;
+    /* padding: 16px; */
+    background-color: none;    
+}
+/*
+#toolbar {
+    position: fixed;
+    z-index: 100;
+    width: 100%;
+    bottom: -20px;
     margin-bottom: 20px;
     height: 24px;
     padding: 20px;
     background-color: #222;
-    
 }
+*/
 div.clicked {
     background-color: #111;
 }
@@ -101,20 +163,27 @@ div.clicked {
 #mainSVG{
     padding: 10px 0px 20px 28px;
 }
+#headpad {
+    padding: 0px 42px;
+}
+#bottompad {
+    padding: 0px 42px;
+    clear: both;
+}
 .title {
     font-weight: 600;
 }
 .button {
     padding: 4px 12px;
     margin-right: 10px;
-    background-color: #333;
+    background-color: #555;
     color: #fff;
     float: left;
     font-size: 11px;
     letter-spacing: 1px;
     font-weight: 100;
     cursor: pointer;
-     font-family: "Oswald-Regular"
+    font-family: "Oswald"
 }
 .button:hover {
     background-color: #555;
@@ -198,7 +267,7 @@ div.clicked {
     color: #666;
 }
 .underColumn {
-    font-family: Oswald-Regular;
+    font-family: Oswald;
     border-bottom: 1px #333 solid;
 }
 #supplemental {
@@ -214,4 +283,20 @@ text.shadow {
   stroke: #fff;
   stroke-width: 3px;
   stroke-opacity: .8;
+}
+.pub_blocker {
+    fill: url(/media/images/pape_fade.png) repeat 0 0;
+}
+#whitelogo {
+    float: left;
+    margin-top: 0px;
+    margin-right: 20px;
+}
+#wordsearch {
+    float: right;
+    margin: -3px 40px 0px;
+}
+#searchtxt {
+    padding: 4px 8px;
+    margin-right: 0px 12px 0px;
 }
