--- a/templates/news/collate.html
+++ b/templates/news/collate.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="/media/js/getdata.js"></script>
     <div id="toolbacker"></div>
     <div id="toolbar">
-        <div id="whitelogo"><img src="/media/images/inartlogo_white_small.png" alt="fix" title="pleased to meet you" width="97" height="24"/></div>
+        <div id="whitelogo"><img src="/media/images/inartlogo_white_small.png" alt="fix" title="pleased to meet you" width="97" height="24" style="opacity: 0.6;"/></div>
         <div id="heatbutton" class="button">map:freq</div>
         <div id="namedbutton" class="button">named:levels</div>
         <div id="familybutton" class="button">show:family</div>
