--- a/media/css/main.css
+++ b/media/css/main.css
@@ -23,6 +23,24 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Miso';
+    src: url('miso.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Miso';
+    src: url('miso-light.otf') format('opentype');
+    font-weight: 200;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Miso';
+    src: url('miso-bold.otf') format('opentype');
+    font-weight: 600;
+    font-style: normal;
+}
 
 @font-face {
     font-family: 'Titillium';
@@ -410,7 +428,12 @@ form p span {
     padding: 4px 8px 2px;
     margin: 12px 0px 2px;
 }
-
+.label {
+    color: #666;
+    font-size: 11px;
+    font-family: Miso;
+    font-weight: 400;
+}
 
 
 
